syntax = "proto3";

package openaiserver.api.v1;

option go_package = "server/openai-server/api/v1;v1";

import "google/api/annotations.proto";

service SystemService {
  // 获取web配置信息
  rpc GetWebConfig(GetWebConfigRequest) returns (GetWebConfigReply) {
    option (google.api.http) = {
      get: "/v1/systemmanage/webconfig"
    };
  };
}

message GetWebConfigRequest {

}

message GetWebConfigReply {
  string logoAddr = 1;
  string themeColor = 2;
  string systemNameEn = 3;
  string systemNameZh = 4;
  string organization = 5;
  bool manualInvisible = 6;
  string thirdPlatform = 7;
}